# rtmidi-rs

./: Cargo.toml  build.rs
src/: api.rs  bindings.rs  ffi.rs  midi.rs  midi_in.rs  midi_out.rs
