[package]
name = "rtmidi"
version = "0.3.0"
authors = ["Rob Hardwick <robhardwick@gmail.com>", "Dani Biro <danipro93@gmail.com>"]
edition = "2018"
description = "Safe wrapper for RtMidi, realtime MIDI input/output"
repository = "https://github.com/robhardwick/rtmidi-rs"
readme = "README.md"
keywords = ["midi", "audio", "music", "sound"]
categories = ["multimedia::audio", "api-bindings"]
license = "MIT"

[features]
default = ["coreaudio", "alsa", "winmm"]
coreaudio = []
alsa = []
jack_linux = []
winmm = []

[build-dependencies]
cmake = "0.1"

[target.'cfg(any(target_os="linux"))'.build-dependencies]
pkg-config = "0.3"
